<resources>
    <string name="app_name">CalvinHealiva</string>

    <!--Login Strings-->
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="learn_about_us">Learn About Us</string>
    <string name="or">Or</string>
    <string name="type_email">Type Email</string>
    <string name="type_password">Type Password</string>
    <string name="view_and_agree_to_terms">View and Agree to Terms</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_the_help_you_need_anonymously">Get the help you need anonymously.</string>

    <!--Messaging Strings-->
    <string name="messaging">Messaging</string>
    <string name="newchat">newChat</string>
    <string name="therapist">Therapist</string>
    <string name="peer">Peer</string>
    <string name="guccigang">GucciGang</string>
    <string name="yk_the_counselor">YK the Counselor</string>


    <!--Events Strings-->
    <string name="events">Events</string>
    <string name="title_activity_event1_page">Events1Page</string>
    <string name="title_activity_events2_page">Event2Page</string>
    <string name="event1">Event 1</string>
    <string name="event_2">Event 2</string>

    <!--Appointments Strings-->
    <string name="appointments">Appointments</string>
    <string name="view_appointments">View Appointments</string>
    <string name="see_appointments">Set Appointments</string>

    <!--About Strings-->
    <string name="about_title">About - Vision Statement</string>
    <string name="vision_statement_p1">According to the Anxiety and Depression Association of America, 85% of college students have felt overwhelmed by everything they need to balance. From extracurriculars to courseload; relationships to personal time; this feeling of being overwhelmed can lead to, or increase, levels of anxiety and depression in students. Often these students do not feel comfortable revealing their identity. Unfortunately, the current system requires students to go in person to the Center for Counseling and Wellness to talk to a counselor. This is why CalvinHealiva will serve the community here at Calvin University in an alternate way by providing a free app that connects students to counselors with an option to connect anonymously.With their student ID’s, Calvin students will have the option to seek counseling from certified counselors for free and have the benefit of remaining anonymous if they so desire. </string>
    <string name="vision_statement_p2">To better serve the community, we decided to create the app in Android Studio due to the time constraints related to this project. Since Android is one of the most commonly used mobile platforms and thus one with the most resources available, we decided to design and develop our project in Android Studio.</string>

    <!-- Root Preferences -->
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
        </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_activity_settings">Settings</string>
    <string name="test">Test</string>

    <!--Profile Settings Strings-->
    <string name="be_fully_anonymous">Be Fully Anonymous</string>
    <string name="anonymityoff">anonymityOff</string>
    <string name="anonymityon">anonymityOn</string>
    <string name="show_name">Show Name</string>
    <string name="shownameoff">showNameOff</string>
    <string name="shownameon">showNameOn</string>
    <string name="show_picture">Show Picture</string>
    <string name="showpicoff">showPicOff</string>
    <string name="showpicon">showPicOn</string>
    <string name="add_edit_profile_picture">Add/Edit Profile Picture:</string>
    <string name="add_edit_profile_description">Add/Edit Profile Description:</string>

    <!-- Settings Strings -->
    <string name="listeneroff">listenerOff</string>
    <string name="listeneron">listenerOn</string>
    <string name="be_peer_listener">Be Peer Listener</string>
    <string name="nonofications">noNofications</string>
    <string name="shownotifications">showNotifications</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="to_view_profile_settings_see_profile_page">To view Profile Settings, see Profile page or click here</string>
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current Password:</string>
    <string name="new_password">New Password:</string>
    <string name="save_password">Save Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password:</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="plus">+</string>
    <string name="no_appt">No Appointments on this date</string>

    <!-- Password pages from Login -->
    <string name="enter_calvin_email">Enter Calvin Email</string>
    <string name="enter_code">Enter Code:</string>
    <string name="enter_code_from_email">Enter Code from Email</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="complete">Complete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_code">Send Code</string>
    <string name="we_will_send_you_a_code_to_enter_on_the_next_page">We will send you a code to enter on the next page.</string>

    <!-- Create Account -->
    <string name="calvin_email">Calvin Email:</string>
    <string name="create_password">Create Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="review_terms_and_conditions">Review Terms and Conditions:</string>
    <string name="finish">Finish</string>
    <string name="continueText">Continue</string>
    <string name="next">Next</string>

</resources>
