<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPage"
    android:background="@color/grey">

    <Button
        android:id="@+id/menuItemOne"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight=".80"
        android:autoText="true"
        android:background="@drawable/grey_button_border"
        android:drawableStart="@drawable/ic_message"
        android:drawableLeft="@drawable/ic_message"
        android:drawableEnd="@drawable/ic_caret_right"
        android:drawableRight="@drawable/ic_caret_right"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/messaging"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/menuItemTwo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuItemTwo"
        android:layout_height="70dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/grey_button_border"
        android:layout_width="match_parent"
        android:layout_weight=".80"
        android:text="@string/events"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/menuItemThree"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableRight="@drawable/ic_caret_right"
        android:drawableLeft="@drawable/ic_group"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableEnd="@drawable/ic_caret_right"
        android:drawableStart="@drawable/ic_group" />

    <Button
        android:id="@+id/menuItemThree"
        android:layout_width="match_parent"
        android:layout_weight=".80"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/grey_button_border"
        android:drawableTop="@color/lightgray"
        android:text="@string/appointments"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableRight="@drawable/ic_caret_right"
        android:drawableLeft="@drawable/ic_calendar"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableEnd="@drawable/ic_caret_right"
        android:drawableStart="@drawable/ic_calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>